fill "What Is CSS Grid"

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main class="max-width">
         <article>
             <h2>What Is CSS Grid</h2>
+            CSS Grid is a layout system that consists of both rows and columns, allowing the user to be able to manipulate a part of their site in 2 dimensions. This makes styling websites a lot easier, before grid was created a lot of developers used the table element to mimic what a grid can do. This was a huge pain for most people, so when grid was created developers and designers alike rejoiced! CSS Grid was introduced in 2012 by Bert Bos, and his associate Håkon Wium Lie. Grid started as a very simple way to show content on a very small screen. When grid was first introduced developers/designers all over the world looked at it as a revolutionary way to change the layout of pages, and to this day is used in hundreds of websites all over the Internet. 
         </article>
 
         <article>
