added my section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
 
         <article>
             <h2>How to Build a Grid Container</h2>
+            <div class="description">
+                <h3>Grid Container</h3>
+            <p>To make a Grid Container you must set the display property to grid or inline-grid.</p>
+            <p>Grid containers are made up of grid itemds placed inside of columns and rows.</p>
+            <p>The following is an example of a grid container</p>
+
+            <div class="grid-container">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+              <div>4</div>
+            </div>
+
+            <p>To achive this, first a create a div with a class of "grid-container"</p>
+            <p>Next, I create additional div elements for each column I want my grid to have. Direct child elements of the grid container automatically become grid items.</p>
+            <img src="images/divimage.png" alt="div image" width="250px">
+            <p>Lastly, I add custom CSS for how I would like to grid to display on the website.</p>
+            <img src="images/cssimage.png" alt="css image" width="250px">
+            </div>
         </article>
 
         <article>
